--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -4,7 +4,7 @@ description: "Psych 3890"
 engine: knitr
 freeze: false
 Syllabus:
-  pdf: "Syllabus_Psych3890.pdf"
+  pdf: "Syllabus_Psych3890_Spring2025.pdf"
 ---
 
 ```{css, echo=FALSE}
@@ -35,12 +35,12 @@ Syllabus:
 
 ```{=html}
 <p class="text-center">
-  <a class="btn btn-primary btn-lg syllabus-download" href="Syllabus_Psych3890_24-Jan.pdf" target="_blank">
+  <a class="btn btn-primary btn-lg syllabus-download" href="Syllabus_Psych3890_Spring2025.pdf" target="_blank">
     <i class="fa-solid fa-file-arrow-down"></i>&ensp;Download syllabus
   </a>
 </p>
 
 <div class="embed-container">
-  <iframe src="Syllabus_Psych3890_24-Jan.pdf" style="border: 0.5px"></iframe>
+  <iframe src="Syllabus_Psych3890_Spring2025.pdf" style="border: 0.5px"></iframe>
 </div>
 ```
