--- a/3-HW.qmd
+++ b/3-HW.qmd
@@ -2,50 +2,30 @@
 title: "Homework 3"
 ---
 
-**Data:** You will use the same Human Connectome Project dataset you worked with in the `R` class and this semester's `R` refresher. It is available [here](https://raw.githubusercontent.com/josh-jackson/GLM_3890/main/hcp-data.csv)
+**Data:** You will need to use the Dawtry et al., 2015 Psychological Science article and the accompanying dataset to answer all questions. Please download this [`dawtry-hw2-data`](https://raw.githubusercontent.com/josh-jackson/GLM_3890/main/dawtry-hw2-data.csv) dataset for the homework, which corresponds to study 1a of the paper. [The paper can be found here](https://github.com/josh-jackson/GLM_3890/blob/main/Dawtry2015-PS.pdf).
 
-Remember that if you work with a peer or use AI tools like Chat-GPT, you must cite them in your code. 
+Remember that if you work with a peer or use AI tools like Chat-GPT, you must cite them in your code.
 
-You will submit both your .Rmd and HTML files to Canvas. For all figures, you must be intentional. Change the axes names, the theme etc. Do not settle for the defaults!
+You will submit both your .Rmd (or .qmd) and HTML files to Canvas. For all figures, you must be intentional. Change the axes names, the theme etc. Do not settle for the defaults!
 
 Good luck!
 
 ## Question 1
 
-Run a univariate regression model where Mean Purpose in Life is predicted by Life Satisfaction. Answer the following for this model:
+Graph the distributions of the following items. Be sure to comment on anything you find irregular or interesting. The variables to be plotted are:
 
-- Interpret the coefficients
-- Describe what $R^2$ means, and interpret this model's $R^2$
-- Describe what $\sigma$ means, and interpret this model's $\sigma$. Overall, is this a "good" model? 
-- Is Life Satisfaction a good predictor of Mean Purpose in Life? How do you know
+-   Household Income
+-   Fairness and Satisfaction
+-   Social Circle Mean Income
+-   Population Mean Income
+-   Political Preference
 
 ## Question 2
 
-Repeat the same as above, but now use the NEO Agreeableness subscale as the predictor. Answer the same questions as above.
+Run a regression where political preferences predict redistribution:
 
-## Question 3
-
-Run a third model where Mean Purpose in Life is predicted by both Life Satisfaction and the NEO Agreeableness subscale.
-
-- Interpret all the coefficients
-- Is this a good model? How do you know?
-
-## Question 4
-
-Given your model from Question 3, please do the following (note, you might need to create some more univariate models)
-
-- Create a measure of Mean Purpose that is *independent* of Life Satisfaction. Store this as an object. This will be your **Y** axis.
-- Create a measure of Life Satisfaction that is *independent* of Agreeableness. This will be your **X** axis.
-- Now plot the above 2. Store this plot as it's own object. Make sure to include a best fit line in your figure.
-
-## Question 5
-Given your model from Question 3, please do the following (note, you might need to create some more univariate models)
-
-- Create a measure of Mean Purpose that is *independent* of Agreeableness. Store this as an object. This will be your **Y** axis.
-- Create a measure of Agreeableness that is *independent* of Life Satisfaction This will be your **X** axis.
-- Now plot the above 2. Store this plot as it's own object. Make sure to include a best fit line in your figure.
-
-## Question 6
-
-- Create a single figure where the plot from Question 4 is the first panel on the left, and the plot from Question 5 is the second panel on the right. You should wind up with a single figure. 
-- Give this figure the title "Added Variable Plot". In your own words, try to describe what you did and *why* you did it. It's OK to be confused! Just give it your best shot. 
+-   Write the formal equation (be specific!)
+-   Interpret the intercept and the regression coefficient (be specific!)
+-   Standardize the variables, rerun the model, write the formal equation (be specific!) and interpret the intercept and the regression coefficient (be specific!)
+-   Calculate the correlation of the two variables (use the original variables in raw units). How does this relate to the standardized and unstandardized regression coefficients?
+-   Created a fitted vs. residuals plot. Do not use the defaults -- you must (at the very least) change the labels, colors, and give it a titles. Then interpret this plot.
