--- a/6-HW.qmd
+++ b/6-HW.qmd
@@ -1,27 +1,48 @@
 ---
-title: "hw 6"
+title: "Homework 5"
 ---
 
-Due: 3/4 at 9:59am
+Due 2/26 at 9:59am
 
-**Data:**  The data consist of a 2x3 anova design examining comics. The two factors are: 1) Publisher, which has two levels (DC or Marvel comics). 2) is Alignment, which has three levels (good, bad, neutral). The DV is Total, which is a combination of strength, intelligence, speed, durability, power, and combat. Higher scores are better. 
-
-The research question is whether there are differences in total across publisher, across type of superhereo alignment and whether there is an interaction between these two factors. Data can be found here: [`hw-6-data.csv`](superhero.csv)  
+**Data:** The dataset looks at happiness in college as a relationship with school success, friendship quality, SES, and an intervention group (1 = control, 2 = study skills training, 3 = social skills training). The data are here: [`hw-5-data.csv`](hw-5-data.csv)
 
 Remember that if you work with a peer or use AI tools like Chat-GPT, you must cite them in your code. 
 
-You will submit both your .Rmd/.qmd and HTML files to Canvas. For all figures, you must be intentional. Change the axes names, the theme etc. Do not settle for the defaults!
+You will submit both your .Rmd and HTML files to Canvas. For all figures, you must be intentional. Change the axes names, the theme etc. Do not settle for the defaults!
 
 Good luck!
 
-1. Write the equation that you will use to test the hypothesis. Run this in R and interpret what each of the coefficients mean. 
+## Question 1
 
-2. Are there any significant differences between?  
-  a. Good and bad? 
-  b. DC vs Marvel
-  c. DC bad superheros vs Marvel bad superheros
-  d. DC neutral vs DC bad
+Run a two-predictor regression predicting happiness by friendship and school success and the interaction between the two.
 
-3. What are the standardized (cohen's d) differences between the groups in #2? 
+- Describe your hypothesis for the interaction using the study variables
+- Describe in words what exactly the b1, b2, and b3 coefficients are telling us in this model. 
 
-4. Create two graphs. 1. that show cell differences between groups. 2. that show differences in one of the marginal means. 
+## Question 2
+
+Compute the following 3 simple regression equations based on the model you ran in Question 1. Your choice of moderating variable depends on your hypothesis. Write out and interpret each of these simple slope equations. 
+
+- The regression of Y on X at the mean of X2
+- At one standard deviation above the mean of X2 (X2hi)
+- At one standard deviation below the mean of X2 (X2low). 
+
+## Question 3
+
+Graph the three simple slopes above within a single figure (no multiple panels).
+
+## Question 4
+
+Are any of these simple slopes significantly different from 0? How do you know? (i.e., we want a little more info than just "yes" or "no", but you could do this in 1-2 sentences.)
+
+## Question 5
+
+Create a new model that examines if happiness can be explained by school success and your intervention. Do not transform any variables.
+
+  - Interpret the intercept and each of the lower order coefficients. Be precise.
+  - Conceptually interpret the interaction(s)
+  - Create a single figure illustrating the interaction relationships
+
+## Question 6
+
+Repeat the same regression you ran in Question 5, however before running it, please mean-center your continuous predictor. Re-interpret the intercept, the lower order coefficients, and the interaction(s).
