--- a/8-hw.qmd
+++ b/8-hw.qmd
@@ -1,44 +1,23 @@
 ---
-title: "homework 8"
+title: "HW 7"
 ---
 
-## Instructions
 
-Please complete this assignment by creating a new RMarkdown (or Quarto) file. Be sure to include your name in the preamble. Please submit both your .Rmd (or .qmd) and your .html files to Canvas.
+Due: 3/18 at 9:59am
 
-**Data:**  [`hw-8-data.csv`](https://raw.githubusercontent.com/josh-jackson/GLM_3890/main/hw-8-data.csv)
-
-
-# Question 1
-
-You are interested in the relationship between how much people want control and how this might predict self-esteem. Using the Desirability of Control scale and the Rosenberg Self-Esteem scale, please do the following.
-
-- Create a structural equation model to see if Desirability of Control predicts Self-Esteem. Please go about this using all items from both scales. For each scale, you can assume that all items are measuring the same construct.
-
-- Does Desirability of Control predict Self-Esteem? What is the regression coefficient, and is it significant?
-
-- Look at the factor loadings for each scale and comment (aka write a few sentences) on what you notice. Does it all make sense? Do any items stand out to you? 
-
-- Is this a good model? How do you know?
-
-# Question 2
-
-You are interested in the Narcissistic Personality Inventory. Current literature says that there are 7 subscales to this:
-
-1. Authority: items 1,8,10,11,12,32,33,36 
-2. Exhibitionism: items 2,3,7,20,28,30,38 
-3. Superiority: items 4,9,26,37,40 
-4. Entitlement: items 5,14,18,24,25,27 
-5. Exploitativeness: items 6,13,16,23,35 
-6. Vanity: items 15,19,29 
-7. Self-Sufficiency: items 17,21,22,31,34,39 
+**Data:** Data are the same as presented in class. They are repeated measures data where daily observations of negative and positive affect are nested within participant. Participants could have up to 100 observations. Data can be found here: [`data_hw_7.csv`](data_hw_7.csv)
 
 
-You hypothesize that while you think there might be this 7 factor latent structure, there might also be a single higher order latent factor that you might call "general narcissism" or something like that.
+1. What situations would you need to use MLM?  What are two benefits to MLMs? 
 
-- Sketch out the 2 models that you will create to test this hypothesis. Use a pen and paper or power point to create these figures. Don't use R. 
+2. What types of variables can be considered "level 1" and what types of variables can be considered "level 2"?
 
-- Now actually run the models in R. 
+3. A researcher is interested in how exercise (operationalized as number of steps) is related to a person's level of positive affect, with positive affect serving as the DV and exercise as the IV. However the researcher knows that she could think of exercise both as a between subjects variable (some people exercise more than others), as well as a within person variable (some days you exercise, sometimes you don't).  Write out a level 1 equation and level 2 equation that tests the hypothesis that these two forms of exercise are related to positive affect, describing how to interpret each coefficient. 
 
-- Describe what you find. Which of these hypotheses do you think is most supported? How do you know?
+4. Using the data, run a model where daily levels of positive affect (P_A.std) are predicted by both person mean centered daily steps (steps.pmd) and person mean average steps (steps.pm). 
+  a. Interpret the coefficient for the level 1 effect of steps
+  b. What coefficient tests whether people who take more steps on average have higher levels of positive affect? 
+  c. Interpret the random effect for intercept. 
+
+5. How would you change the model to test the hypothesis that those who take more steps on average (lets call them athletes) don't benefit from daily steps in the same way as those who take less steps on average do (lets call them couch potatoes)? In other words, how could we test whether couch potatoes feel higher levels of positive affect after taking more steps than they typically do whereas if an athlete has a day of higher than typical steps they do not have higher levels of positive affect.    
 
